<package>
  <name>heron_gazebo</name>
  <version>0.1.0</version>
  <description>heron_gazebo</description>
  <maintainer email="renye@ntu.edu.sg">ren ye</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="renye@ntu.edu.sg">ren ye</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>heron_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
